syntax = "proto3";

option java_package = "br.com.houseseeker.service.proto";
option java_multiple_files = true;

import "message/request_commons.proto";
import "message/response_commons.proto";
import "message/comparison_commons.proto";
import "message/city.proto";

message GetCitiesRequest {
  message ProjectionsData {
    optional bool state = 1;
    optional bool city = 2;
  }
  message ClausesData {
    optional StringComparisonData state = 1;
    optional StringComparisonData city = 2;
    optional ClauseOperator innerOperator = 3;
    optional ClauseOperator outerOperator = 4;
  }
  message OrdersData {
    optional OrderDetailsData state = 1;
    optional OrderDetailsData city = 2;
  }
  repeated ClausesData clauses = 1;
  optional PaginationRequestData pagination = 2;
  optional OrdersData orders = 3;
}

message GetCitiesResponse {
  repeated CityData cities = 1;
  PaginationResponseData pagination = 2;
}

service CityDataService {
  rpc GetCities(GetCitiesRequest) returns (GetCitiesResponse);
}